2013-01-09  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getConstructor.java:
	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getDeclaredAnnotations.java:
	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getDeclaredConstructor.java:
	Added new tests for AbstractMethodError class.

2013-01-08  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/AbstractMethodError/classInfo/getCanonicalName.java:
	* testlet/java/lang/AbstractMethodError/classInfo/getClasses.java:
	* testlet/java/lang/AbstractMethodError/classInfo/getComponentType.java:
	Added new tests for AbstractMethodError class.

2013-01-07  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getAnnotation.java:
	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getAnnotations.java:
	Added new tests for AbstractMethodError class.

2012-12-21  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Byte/byteDivide.java:
	Added new test related to byte divide operation.

2012-12-20  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Long/longModulo.java:
	Added new test related to long modulo operation.

2012-12-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Long/longDivide.java:
	Added new test related to long divide operation.

2012-12-18  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Integer/integerDivide.java:
	Fixed.
	* gnu/testlet/java/lang/Integer/integerModulo.java:
	Added new test related to integer modulo operation.

2012-12-17  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Integer/integerDivide.java:
	Added new test related to integer divide operation.

2012-12-14  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Float/floatToInt.java:
	* testlet/java/lang/Float/floatToLong.java:
	Added two new tests related to float to long conversions.

2012-12-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
